--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Work+Sans:300,400,500,600,700');
+@import url('https://fonts.geekzu.org/css?family=Poppins:300,400,500,600,700|Work+Sans:300,400,500,600,700');
 
 body {
     color: #191919;
